--- a/AirportFlights.Web/AirportFlights.Web.csproj
+++ b/AirportFlights.Web/AirportFlights.Web.csproj
@@ -1,11 +1,12 @@
 <Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net461</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <IsPackable>false</IsPackable>
     <TypeScriptToolsVersion>2.3</TypeScriptToolsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
@@ -22,6 +23,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AirportFlights.Core\AirportFlights.Core.csproj" />
+    <ProjectReference Include="..\AirportFlights.Infra\AirportFlights.Infra.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ClientApp\api\" />
   </ItemGroup>
   <Target Name="RunWebpack" AfterTargets="ComputeFilesToPublish">
     <!-- As part of publishing, ensure the JS resources are freshly built in production mode -->
